<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E27E8"
    android:orientation="vertical"
    tools:context=".ButtonActivity1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/packing_list"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />


    <TextView
        android:id="@+id/packingtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/tops"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Topminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countDown"
                android:text="-"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_initial_value"
                android:textAlignment="center"
                android:textColor="#A39999"
                android:textSize="34sp" />

            <Button
                android:id="@+id/Topplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countUp"
                android:text="+"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/bottoms"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Bottomsminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countDown"
                android:text="-"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_count2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_initial_value2"
                android:textAlignment="center"
                android:textColor="#A39999"
                android:textSize="34sp" />

            <Button
                android:id="@+id/Bottomsplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countUp"
                android:text="+"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/undergarments"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Underminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countDown"
                android:text="-"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_count3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_initial_value3"
                android:textAlignment="center"
                android:textColor="#A39999"
                android:textSize="34sp" />

            <Button
                android:id="@+id/Underplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countUp"
                android:text="+"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/shoes"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Shoesminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countDown"
                android:text="-"
                android:textColor="#000000"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_count4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_initial_value4"
                android:textAlignment="center"
                android:textColor="#A39999"
                android:textSize="34sp" />

            <Button
                android:id="@+id/Shoesplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CC8062"
                android:onClick="countUp"
                android:text="+"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/screenshot_to_save"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="italic" />


    </LinearLayout>

